--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit
-pandas
-seaborn
-matplotlib
-wordcloud
-scikit-learn
-textblob
-plotly
-openai
+pandas == 1.5.3
+seaborn == 0.12.2
+matplotlib == 3.7.0
+wordcloud == 1.9.3
+scikit-learn == 1.2.1
+textblob == 0.18.0.post0
+openai == 1.42.0
+streamlit == 1.37.1
+plotly == 5.9.0
