--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-pandas == 1.5.3
+pandas
 seaborn == 0.12.2
-matplotlib == 3.7.0
+matplotlib
 wordcloud == 1.9.3
-scikit-learn == 1.2.1
+scikit-learn
 textblob == 0.18.0.post0
 openai == 1.42.0
 streamlit
